--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h2>Choose Grid Size</h2>
     <form id="pickSize">
         Grid Height:
-        <input type="number" id="gridHeight" name="height" min="1" value="1">
+        <input type="number" id="gridHeight" name="height" min="1" max ="100" value="1">
         Grid Width:
-        <input type="number" id="gridWidth" name="width" min="1" value="1">
+        <input type="number" id="gridWidth" name="width" min="1" max ="100" value="1">
         <input type="submit">
     </form>
 
